<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtTitle"
        android:textColor="#2E77BB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/txtSubtitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="379dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/imgPhrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amex" />

    <RadioGroup
        android:layout_width="276dp"
        android:layout_height="144dp"
        android:layout_marginTop="160dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radAmexPlatinum"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/radAmexPlatinum"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radAmexGold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/radAmexGold"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radAmexEveryday"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/radAmexEveryday"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtHint"
        android:layout_width="185dp"
        android:layout_height="46dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txtHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDecision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="452dp"
        android:textColor="#2E77BB"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/btnApply"
        android:textSize="24sp"
        app:backgroundTint="#2E77BB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>